welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: ':' expected but ')' found.
def scanMotif(long) {
                  ^Array1:32: error: identifier expected but '}' found.
}
^